--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -3,6 +3,24 @@
 @import 'tailwindcss/utilities';
 
 @layer base {
+	@font-face {
+		font-family: 'Inter var';
+		font-weight: 100 900;
+		font-display: swap;
+		font-style: normal;
+		font-named-instance: 'Regular';
+		src: url('/fonts/Inter-roman.var.woff2') format('woff2');
+	}
+
+	@font-face {
+		font-family: 'Inter var';
+		font-weight: 100 900;
+		font-display: swap;
+		font-style: italic;
+		font-named-instance: 'Italic';
+		src: url('/fonts/Inter-italic.var.woff2') format('woff2');
+	}
+
 	:root {
 		color-scheme: dark;
 	}
