--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -25,6 +25,10 @@
 		color-scheme: dark;
 	}
 
+	* {
+		-webkit-backface-visibility: hidden;
+	}
+
 	body {
 		@apply bg-gray-900 text-gray-400 text-100 overflow-y-scroll;
 	}
