--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -46,16 +46,6 @@
 	}
 }
 
-@layer utilities {
-	.checkbox {
-		@apply bg-transparent border border-gray-600 rounded w-4 h-4 transition-colors duration-100;
-	}
-
-	.checkbox-checked {
-		@apply bg-gray-600 border-transparent;
-	}
-} 
-
 .transition-fade-100 {
 	&-enter-active, &-leave-active {
 		@apply transition-opacity duration-150;
@@ -64,4 +54,8 @@
 	&-enter-from, &-leave-to {
 		@apply opacity-0;
 	}
+}
+
+:root {
+	--icon-archive: url('@/assets/icons/archive.svg')
 }
