--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -46,12 +46,14 @@
 		@apply text-150 font-semibold text-gray-300;
 	}
 
-	:focus {
-		@apply outline-none ring-2 ring-green-400 transition-shadow duration-100;
-	}
+	@screen mouse-only {
+		:focus {
+			@apply outline-none ring-2 ring-green-400 transition-shadow duration-100;
+		}
 
-	:focus:not(:focus-visible) {
-		@apply ring-opacity-0;
+		:focus:not(:focus-visible) {
+			@apply ring-opacity-0;
+		}
 	}
 }
 
