tailwind syntax fix! oops

--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -46,14 +46,13 @@
 		@apply text-150 font-semibold text-gray-300;
 	}
 
-	@screen mouse-only {
-		:focus {
-			@apply outline-none ring-2 ring-green-400 transition-shadow duration-100;
-		}
+	:focus {
+		@apply mouse-only:outline-none mouse-only:ring-2 mouse-only:ring-green-400;
+		@apply mouse-only:transition-shadow mouse-only:duration-100
+	}
 
-		:focus:not(:focus-visible) {
-			@apply ring-opacity-0;
-		}
+	:focus:not(:focus-visible) {
+		@apply mouse-only:ring-opacity-0;
 	}
 }
 
