added body scroll lock plugin and optimizations

--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -31,7 +31,8 @@
 	}
 
 	body {
-		@apply bg-gray-900 text-gray-400 text-100 overflow-y-scroll;
+		@apply bg-gray-900 text-gray-400 text-100;
+		overflow: overlay;
 	}
 
 	#app {
